  11-Apr-2023  - V0.67 Fix issue with CARD lineage tree building--handle cases with two parents at same depth; Add treeNodeList building and exporting
  27-Apr-2023  - V0.68 Update CARD treeNodeList building
   2-May-2023  - V0.69 Remove depth field from CARD lineage tree
   5-May-2023  - V0.70 Actually check cache files exist in PharosTargetProvider testCache()
  22-May-2023  - V0.71 Add retries to tox task for MMseqs2 download
  13-Jun-2023  - V0.72 Improve logging
   3-Jul-2023  - V0.73 imgt.org no longer supports http
  18-Jul-2023  - V0.74 Update baseVersion for ChEMBL
  19-Sep-2023  - V0.75 Update testCache and reload methods for target providers;
                       Make CARDTargetOntologyProvider stashable;
                       Add try/except for chembl_webresource_client.new_client imports in ChEMBL providers in case of service downtime
  21-Sep-2023  - V0.76 Additional updates to testCache and reload methods for target providers
   9-Jan-2024  - V0.77 Update CARDTargetAnnotationProvider to ensure same annotations are selected between reruns (using a tie breaker);
                       Bug fix in ChEMBLTargetActivityProvider in updating cache file
   1-Jul-2024  - V0.78 Update SAbDabTargetProvider; Fix pylinting
  22-Jul-2024  - V0.79 Update SAbDabTargetProvider
  20-Aug-2024  - V0.80 Add support for loading and accessing target cofactor data on MongoDB;
                       Add mock-data submodule
  23-Aug-2024  - V0.81 Add context manager for forming mongo connections in TargetCofactorDbProvider
  26-Aug-2024  - V0.82 Revert back to persistent client connections;
                       Update CARDTargetOntologyProvider resource loading behavior
   9-Dec-2024  - V0.83 Update Azure pipelines to use latest macOS, Ubuntu, and python 3.10
   5-Jun-2025  - V0.84 Update CARDTargetProvider and CARDTargetAnnotationProvider to handle/skip cases missing "AMR Gene Family" term